--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ discord.py
 idna==2.6
 idna-ssl==1.1.0
 multidict==4.2.0
-neo4j-connection
+neo4j
 py2neo==4.2.0
 ruamel.yaml==0.15.37
 websockets==6.0
