--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ discord.py
 idna==2.6
 idna-ssl==1.1.0
 multidict==4.2.0
-neo4j
+git+git://github.com/Support-Manager/neo4j-connection.git@8144fe6#egg=neo4j-connection
 py2neo==4.2.0
 ruamel.yaml==0.15.37
 websockets==6.0
